--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,7 +24,10 @@ jobs:
         
       - name: Test
         run: dotnet test --no-restore --verbosity normal
-        
+
+      - name: Publish
+        run: dotnet publish -c Release -o BP
+
       - name: Azure Login
         uses: Azure/login@v1.4.0
         with:
@@ -34,3 +37,4 @@ jobs:
         uses: Azure/webapps-deploy@v2
         with:
           app-name: BP-X00192332
+          package: './BP' 
