--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,4 +37,5 @@ jobs:
         uses: Azure/webapps-deploy@v2
         with:
           app-name: BP-X00192332
+          publish-profile:  ${{ secrets.PUBLISH_PROFILE }}
           package: './BP' 
