--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,7 +26,7 @@ jobs:
         run: dotnet test --no-restore --verbosity normal
 
       - name: Publish
-        run: dotnet publish -c Release -o BP
+        run: dotnet publish -c Release -o './BP'
 
       - name: Azure Login
         uses: Azure/login@v1.4.0
@@ -34,8 +34,8 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
         
       - name: Deploy to Azure 
-        uses: Azure/webapps-deploy@v2
+        uses: azure/webapps-deploy@v2
         with:
           app-name: BP-X00192332
           publish-profile:  ${{ secrets.PUBLISH_PROFILE }}
-          package: './BP' 
+          package: './BP'
