--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Test
         run: dotnet test --no-restore --verbosity normal
 
-      #- name: Publish
-        #run: dotnet publish -c Release -o './BP'
+      - name: Publish
+        run: dotnet publish -c Release --self-contained true -o './BP'
 
       - name: Azure Login
         uses: Azure/login@v1.4.0
@@ -38,4 +38,4 @@ jobs:
         with:
           app-name: BP-X00192332
           #publish-profile:  ${{ secrets.PUBLISH_PROFILE }}
-          #package: './BP'
+          package: './BP'
