--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,7 +26,7 @@ jobs:
         run: dotnet test --no-restore --verbosity normal
 
       - name: Publish
-        run: dotnet publish -c Release --self-contained true -o './BP'
+        run: dotnet publish -c Release  -o './BP' #--self-contained true -- runtime linux-x64
 
       - name: Azure Login
         uses: Azure/login@v1.4.0
