--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,7 +23,7 @@ jobs:
         run: dotnet build --configuration Release --no-restore
         
       - name: Test
-        run: dotnet test --no-restore --verbosity normal
+        run: dotnet test --configuration Release --no-restore --verbosity normal
 
       - name: Publish
         run: dotnet publish -c Release  -o './BP'
