Added specflow.json to pipeline.yml

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,6 +29,7 @@ jobs:
         uses: cryptic-wizard/run-specflow-tests@v1.2.0
         with:
           test-assembly-dll: BPCalculator.BDDTests\bin\Debug\net5.0\BPCalculator.BDDTests.dll
+          test-execution-json: BPCalculator.BDDTests\bin\Debug\net5.0\specflow.json
           framework: net5.0
           no-build: true
 
