--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,10 +23,10 @@ jobs:
         run: dotnet build --configuration Release --no-restore
         
       - name: Run Unit Tests - xUnit
-        run: dotnet test BPCalculator.UnitTests\BPCalculator.UnitTests.csproj --configuration Release --no-restore --verbosity normal
+        run: dotnet test csd-ca1\BPCalculator.UnitTests\BPCalculator.UnitTests.csproj --configuration Release --no-restore --verbosity normal
         
       - name: Run Acceptance Tests - BDD SpecFlow
-        run: dotnet test BPCalculator.AcceptanceTests\BPCalculator.AcceptanceTests.csproj --configuration Release --no-restore --verbosity normal        
+        run: dotnet test csd-ca1\BPCalculator.AcceptanceTests\BPCalculator.AcceptanceTests.csproj --configuration Release --no-restore --verbosity normal        
 
       - name: Publish
         run: dotnet publish -c Release  -o './BP'
