--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,12 +23,20 @@ jobs:
         run: dotnet build --configuration Release --no-restore
         
       - name: Run Unit Tests - xUnit
-        run: dotnet test BPCalculator.UnitTests/BPCalculator.UnitTests.csproj -c Release --no-build --verbosity normal -l:trx
+        run: dotnet test BPCalculator.UnitTests/BPCalculator.UnitTests.csproj -c Release --no-build --verbosity normal -l:trx --collect "Code coverage"
         
       - name: Run Acceptance Tests - BDD SpecFlow
-        run: dotnet test BPCalculator.AcceptanceTests/BPCalculator.AcceptanceTests.csproj -c Release --no-build --verbosity normal -l:trx        
+        run: dotnet test BPCalculator.AcceptanceTests/BPCalculator.AcceptanceTests.csproj -c Release --no-build --verbosity normal -l:trx --collect "Code coverage"
 
-      - name: Publish
+      - name: Generate Test Reports
+        uses: dorny/test-reporter@v1.5.0
+        with:
+          artifact: ''
+          name: MS Tests                  
+          path: '**.trx'
+          reporter: 'dotnet-trx'  
+
+      - name: Publish Application
         run: dotnet publish -c Release --no-build -o './BP'
 
       - name: Azure Login
