--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,17 +24,20 @@ jobs:
         run: dotnet build --configuration Release --no-restore
         
       - name: Run Unit Tests - xUnit
-        run: dotnet test BPCalculator.UnitTests\BPCalculator.UnitTests.csproj -c Release --no-build --verbosity normal -l:trx --collect "Code coverage"
+        run: dotnet test BPCalculator.UnitTests\BPCalculator.UnitTests.csproj -c Release --no-build --verbosity normal -l:trx /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
         
       - name: Run Acceptance Tests - BDD SpecFlow
-        run: dotnet test BPCalculator.AcceptanceTests\BPCalculator.AcceptanceTests.csproj -c Release --no-build --verbosity normal -l:trx --collect "Code coverage"
+        run: dotnet test BPCalculator.AcceptanceTests\BPCalculator.AcceptanceTests.csproj -c Release --no-build --verbosity normal -l:trx
 
       - name: Generate Tests Report
         uses: dorny/test-reporter@v1.5.0
         with:
-          name: Tests Report                 
+          name: Tests Report
           path: '**.trx'
-          reporter: 'dotnet-trx'  
+          reporter: 'dotnet-trx'
+
+      - name: Generate Code Coverage Report
+        uses: codecov/codecov-action@v1
 
       - name: Publish Application
         run: dotnet publish -c Release --no-build -o '.\BP'
