--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,8 +36,11 @@ jobs:
           path: '**.trx'
           reporter: 'dotnet-trx'
 
-      - name: Generate Code Coverage Report
-        uses: codecov/codecov-action@v1
+      - name: Generate Code Coverage Report - Codecov
+        uses: codecov/codecov-action@v2.1.0
+        with:
+          name: BloodPressureCalculator
+          token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Publish Application
         run: dotnet publish -c Release --no-build -o '.\BP'
