Update pipeline.yml - Add SONAR_TOKEN

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -73,3 +73,5 @@ jobs:
 
       - name: Run Code Static Analysis - SonarCloud
         uses: SonarSource/sonarcloud-github-action@v1.6
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
