Update pipeline.yml - Try dependency checker on linux

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   Build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Git checkout
         uses: actions/checkout@v2
@@ -24,10 +24,10 @@ jobs:
         run: dotnet build --configuration Release --no-restore
         
       - name: Run Unit Tests - xUnit
-        run: dotnet test BPCalculator.UnitTests\BPCalculator.UnitTests.csproj -c Release --no-build --verbosity normal -l:trx /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:Exclude="[BPCalculator.Views]*"
+        run: dotnet test BPCalculator.UnitTests/BPCalculator.UnitTests.csproj -c Release --no-build --verbosity normal -l:trx /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:Exclude="[BPCalculator.Views]*"
         
       - name: Run Acceptance Tests - BDD SpecFlow
-        run: dotnet test BPCalculator.AcceptanceTests\BPCalculator.AcceptanceTests.csproj -c Release --no-build --verbosity normal -l:trx
+        run: dotnet test BPCalculator.AcceptanceTests/BPCalculator.AcceptanceTests.csproj -c Release --no-build --verbosity normal -l:trx
 
       - name: Generate Tests Report
         uses: dorny/test-reporter@v1.5.0
@@ -59,7 +59,7 @@ jobs:
           path: ${{github.workspace}}/reports
 
       - name: Publish Application
-        run: dotnet publish -c Release --no-build -o '.\BP'
+        run: dotnet publish -c Release --no-build -o './BP'
 
       - name: Azure Login
         uses: Azure/login@v1.4.0
@@ -70,7 +70,7 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: BP-X00192332
-          package: '.\BP'
+          package: './BP'
 
   StaticAnalysis:
     runs-on: ubuntu-latest
