--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  Build:
+  Build_Test_and_Publish:
     runs-on: ubuntu-latest
     steps:
       - name: Git checkout
@@ -42,22 +42,6 @@ jobs:
           name: BloodPressureCalculator
           token: ${{ secrets.CODECOV_TOKEN }}
 
-      - name: Dependency Check
-        uses: dependency-check/Dependency-Check_Action@main
-        id: Depcheck
-        with:
-          project: 'BP'
-          path: '.'
-          format: 'HTML'
-          args: >
-            --failOnCVSS 7
-
-      - name: Upload Dependency Check Results
-        uses: actions/upload-artifact@master
-        with:
-          name: Depcheck report
-          path: ${{github.workspace}}/reports
-
       - name: Publish Application
         run: dotnet publish -c Release --no-build -o './BP'
 
@@ -72,7 +56,7 @@ jobs:
           app-name: BP-X00192332
           package: './BP'
 
-  StaticAnalysis:
+  Static_Analysis_And_Dependency_Checker:
     runs-on: ubuntu-latest
     steps:
       - name: Git checkout
@@ -90,3 +74,19 @@ jobs:
           args: >
             -Dsonar.organization=dan-lopes
             -Dsonar.projectKey=dan-lopes_csd-ca1
+
+      - name: Run Dependency Checker
+        uses: dependency-check/Dependency-Check_Action@main
+        id: Depcheck
+        with:
+          project: 'BP'
+          path: '.'
+          format: 'HTML'
+          args: >
+            --failOnCVSS 7
+
+      - name: Upload Dependency Check Results
+        uses: actions/upload-artifact@master
+        with:
+          name: Depcheck report
+          path: ${{github.workspace}}/reports
