Updated pipeline.yml - Added OWASP ZAP scan

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -88,5 +88,17 @@ jobs:
       - name: Upload Dependency Check Results
         uses: actions/upload-artifact@master
         with:
-          name: Depcheck report
+          name: Dependency Checker Report
           path: ${{github.workspace}}/reports
+
+      - name: Pull Docker image for OWASP ZAP
+        run: docker pull owasp/zap2docker-weekly
+
+      - name: Run Security Scan - OWASP ZAP
+        run: docker run -v /report:/zap/wrk/:rw --user root -t owasp/zap2docker-weekly zap-baseline.py -t ${{env.URI}} -I -r zapreport.html
+
+      - uses: actions/upload-artifact@v2
+        name: Upload OWASP ZAP Report
+        with:
+          name: ZAP Report
+          path: /report/zapreport.html
