--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,13 +32,6 @@ jobs:
       - name: Run Acceptance Tests - BDD SpecFlow
         run: dotnet test BPCalculator.AcceptanceTests/BPCalculator.AcceptanceTests.csproj -c Release --no-build --verbosity normal -l:trx
 
-      - name: Generate Tests Report
-        uses: dorny/test-reporter@v1.5.0
-        with:
-          name: Tests Report
-          path: '**.trx'
-          reporter: 'dotnet-trx'
-
       - name: Generate Code Coverage Report - Codecov
         uses: codecov/codecov-action@v2.1.0
         with:
@@ -58,6 +51,17 @@ jobs:
         with:
           app-name: BP-X00192332
           package: './BP'
+
+      - name: Run E2E Tests - Selenium
+        run: dotnet test BPCalculator.E2ETests/BPCalculator.E2ETests.csproj -c Release --no-build --verbosity normal --logger:"trx;LogFileName=selenium.trx"
+
+      - name: Generate Tests Report
+        uses: dorny/test-reporter@v1.5.0
+        with:
+          name: Tests Report
+          path: '**.trx'
+          reporter: 'dotnet-trx'
+
 
   Static_Analysis_And_Dependency_Checker:
     runs-on: ubuntu-latest
