--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,10 +8,11 @@ on:
   workflow_dispatch:
 
 env:
-  URI: https://bp-x00192332.azurewebsites.net/
+  URI: https://bp-x00192332-qa.azurewebsites.net/
 
 jobs:
-  Build_Test_and_Publish:
+  build_and_unit_test:
+    name: Build, Run Unit and Acceptance Tests
     runs-on: ubuntu-latest
     steps:
       - name: Git checkout
@@ -38,6 +39,14 @@ jobs:
           name: BloodPressureCalculator
           token: ${{ secrets.CODECOV_TOKEN }}
 
+  deploy_and_run_performance_tests:
+    name: Deploy to Staging, Run E2E and Performance Tests, Swap Slot
+    needs: build_and_unit_test
+    environment:
+      name: QA
+      url: https://gc-bmicalculator-qa-staging.azurewebsites.net
+    runs-on: ubuntu-latest
+    steps:
       - name: Publish Application
         run: dotnet publish -c Release --no-build -o './BP'
 
@@ -46,10 +55,11 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
         
-      - name: Deploy to Azure 
+      - name: Deploy to Azure - QA
         uses: azure/webapps-deploy@v2
         with:
           app-name: BP-X00192332
+          slot-name: qa
           package: './BP'
 
       - name: Run E2E Tests - Selenium
@@ -62,8 +72,8 @@ jobs:
           path: '**.trx'
           reporter: 'dotnet-trx'
 
-
-  Static_Analysis_And_Dependency_Checker:
+  static_analysis_and_dependency_checker:
+    name: Run Static Analysis and Dependency Checker
     runs-on: ubuntu-latest
     steps:
       - name: Git checkout
@@ -98,6 +108,11 @@ jobs:
           name: Dependency Checker Report
           path: ${{github.workspace}}/reports
 
+  security_scan:
+    name: Run Security Scan
+    runs-on: ubuntu-latest
+    needs: deploy_and_run_performance_tests
+    steps:
       - name: Pull Docker image for OWASP ZAP
         run: docker pull owasp/zap2docker-weekly
 
