--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -49,7 +49,7 @@ jobs:
           reporter: 'dotnet-trx'
 
   deploy_and_run_e2e_tests:
-    name: Publish, Deploy to Staging, Run E2E and Performance Tests, Swap Slot
+    name: Publish, Deploy to QA, Run E2E, Swap Slot
     needs: build_and_unit_test
     runs-on: ubuntu-latest
     steps:
@@ -81,21 +81,14 @@ jobs:
           path: '**.trx'
           reporter: 'dotnet-trx'
 
-      - name: Pull Docker Image for K6
-        run: docker pull loadimpact/k6
-
-      - name: Run Performance Tests - K6
-        run: docker run -i loadimpact/k6 run - <BPCalculator.E2ETests/k6tests/PerformanceTests.js > k6report.txt
-
-      - name: Upload K6 Performance Tests Report
-        uses: actions/upload-artifact@v2
-        with:
-          name: Performance Tests Report
-          path: k6report.txt
+      #SWAP SLOTS
 
   static_analysis_and_dependency_checker:
     name: Run Static Analysis and Dependency Checker
     runs-on: ubuntu-latest
+    env:
+      SONAR_ORGANIZATION: dan-lopes
+      SONAR_PROJECTKEY: dan-lopes_csd-ca1
     steps:
       - name: Git checkout
         uses: actions/checkout@v2
@@ -110,8 +103,8 @@ jobs:
         with:
           projectBaseDir: .
           args: >
-            -Dsonar.organization=dan-lopes
-            -Dsonar.projectKey=dan-lopes_csd-ca1
+            -Dsonar.organization=${{ env.SONAR_ORGANIZATION }}
+            -Dsonar.projectKey=${{ env.SONAR_PROJECTKEY }}
 
       - name: Run Dependency Checker
         uses: dependency-check/Dependency-Check_Action@main
@@ -145,3 +138,23 @@ jobs:
         with:
           name: OWASP ZAP Report
           path: /report/owasp_zap_report.html
+
+  performance_tests:
+    name: Run Security Scan
+    runs-on: ubuntu-latest
+    needs: deploy_and_run_e2e_tests
+    steps:
+      - name: Git checkout
+        uses: actions/checkout@v2
+
+      - name: Pull Docker Image for K6
+        run: docker pull loadimpact/k6
+
+      - name: Run Performance Tests - K6
+        run: docker run -i loadimpact/k6 run - <BPCalculator.E2ETests/k6tests/PerformanceTests.js > k6report.txt
+
+      - name: Upload K6 Performance Tests Report
+        uses: actions/upload-artifact@v2
+        with:
+          name: Performance Tests Report
+          path: k6report.txt
