--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,7 +17,7 @@ jobs:
     name: Build, Run Unit and Acceptance Tests
     runs-on: ubuntu-latest
     steps:
-      - name: Git checkout
+      - name: Git Checkout
         uses: actions/checkout@v2
 
       - name: Setup .NET Core SDK
@@ -30,10 +30,10 @@ jobs:
         run: dotnet build --configuration Release --no-restore
 
       - name: Run Unit Tests - xUnit
-        run: dotnet test BPCalculator.UnitTests/BPCalculator.UnitTests.csproj -c Release --no-build --verbosity normal -l:trx /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:Exclude="[BPCalculator.Views]*"
+        run: dotnet test BPCalculator.UnitTests/BPCalculator.UnitTests.csproj -c Release --no-build --verbosity normal --logger:"trx;LogFileName=UnitTests.trx" /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:Exclude="[BPCalculator.Views]*"
 
       - name: Run Acceptance Tests - BDD SpecFlow
-        run: dotnet test BPCalculator.AcceptanceTests/BPCalculator.AcceptanceTests.csproj -c Release --no-build --verbosity normal -l:trx
+        run: dotnet test BPCalculator.AcceptanceTests/BPCalculator.AcceptanceTests.csproj -c Release --no-build --verbosity normal --logger:"trx;LogFileName=AcceptanceTests.trx"
 
       - name: Generate Code Coverage Report - Codecov
         uses: codecov/codecov-action@v2.1.0
@@ -53,7 +53,7 @@ jobs:
     needs: build_and_unit_test
     runs-on: ubuntu-latest
     steps:
-      - name: Git checkout
+      - name: Git Checkout
         uses: actions/checkout@v2
 
       - name: Publish Application
@@ -90,7 +90,7 @@ jobs:
       SONAR_ORGANIZATION: dan-lopes
       SONAR_PROJECTKEY: dan-lopes_csd-ca1
     steps:
-      - name: Git checkout
+      - name: Git Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
@@ -140,11 +140,11 @@ jobs:
           path: /report/owasp_zap_report.html
 
   performance_tests:
-    name: Run Security Scan
+    name: Run Performance Tests
     runs-on: ubuntu-latest
     needs: deploy_and_run_e2e_tests
     steps:
-      - name: Git checkout
+      - name: Git Checkout
         uses: actions/checkout@v2
 
       - name: Pull Docker Image for K6
