--- a/BPCalculator/appsettings.json
+++ b/BPCalculator/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=500b4222-8488-499b-9d54-6dfc92221892;IngestionEndpoint=https://northeurope-0.in.applicationinsights.azure.com/"
+  }
 }
